# CPP-Project

./: .gitignore  Makefile  README.md  add.cpp  cmake_install.cmake  cmp.cpp  data.cpp  div.cpp  main.cpp  mul.cpp  test.cpp
project1_briefcal/: a.out  main.cpp
project2-Calculator/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a  cmake_install.cmake  judgefuzhi.cpp  judgeother.cpp  main.hpp  min.cpp
project2-Calculator/src/: add.cpp  cal.cpp  cmp.cpp  data.cpp  div.cpp  judgefuzhi.cpp  judgeother.cpp  min.cpp  mul.cpp  trans.cpp
project3_libraryC/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a  cmake_install.cmake  main.c
project3_libraryC/include/: func.h  main.h
project3_libraryC/src/: func.c
project4_libraryC_improve/: CMakeLists.txt  README.md  main.c  test
project4_libraryC_improve/include/: func.h
project4_libraryC_improve/src/: func.c
project5_Class_for_Matrices/: CMakeLists.txt  README.md  main  main.cpp  matrix.cpp  matrix.hpp
project5_Class_for_Matrices/include/: matrix.hpp
project5_Class_for_Matrices/src/: matrix.cpp
